--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,78 @@
 [submodule "iterm/base16-iterm2"]
 	path = iterm/base16-iterm2
 	url = https://github.com/chriskempson/base16-iterm2.git
+[submodule "dotfiles/vim/bundle/command-t"]
+	path = dotfiles/vim/bundle/command-t
+	url = https://github.com/wincent/command-t.git
+[submodule "dotfiles/vim/bundle/supertab"]
+	path = dotfiles/vim/bundle/supertab
+	url = https://github.com/ervandew/supertab.git
+[submodule "dotfiles/vim/bundle/ultisnips"]
+	path = dotfiles/vim/bundle/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
+[submodule "dotfiles/vim/bundle/base16-vim"]
+	path = dotfiles/vim/bundle/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
+[submodule "dotfiles/vim/bundle/vim-pathogen"]
+	path = dotfiles/vim/bundle/vim-pathogen
+	url = https://github.com/tpope/vim-pathogen.git
+[submodule "dotfiles/vim/bundle/nerdtree"]
+	path = dotfiles/vim/bundle/nerdtree
+	url = https://github.com/wincent/nerdtree.git
+[submodule "dotfiles/vim/bundle/terminus"]
+	path = dotfiles/vim/bundle/terminus
+	url = https://github.com/wincent/terminus.git
+[submodule "dotfiles/vim/bundle/vim-javascript"]
+	path = dotfiles/vim/bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
+[submodule "dotfiles/vim/bundle/vim-repeat"]
+	path = dotfiles/vim/bundle/vim-repeat
+	url = https://github.com/tpope/vim-repeat.git
+[submodule "dotfiles/vim/bundle/vim-speeddating"]
+	path = dotfiles/vim/bundle/vim-speeddating
+	url = https://github.com/tpope/vim-speeddating.git
+[submodule "dotfiles/vim/bundle/vim-surround"]
+	path = dotfiles/vim/bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule "dotfiles/vim/bundle/scalpel"]
+	path = dotfiles/vim/bundle/scalpel
+	url = https://github.com/wincent/scalpel.git
+[submodule "dotfiles/vim/bundle/vim-vinegar"]
+	path = dotfiles/vim/bundle/vim-vinegar
+	url = https://github.com/tpope/vim-vinegar.git
+[submodule "dotfiles/vim/bundle/vim-commentary"]
+	path = dotfiles/vim/bundle/vim-commentary
+	url = https://github.com/tpope/vim-commentary.git
+[submodule "dotfiles/vim/bundle/pinnacle"]
+	path = dotfiles/vim/bundle/pinnacle
+	url = https://github.com/wincent/pinnacle.git
+[submodule "dotfiles/vim/bundle/syntastic"]
+	path = dotfiles/vim/bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
+[submodule "dotfiles/vim/bundle/vim-exchange"]
+	path = dotfiles/vim/bundle/vim-exchange
+	url = https://github.com/tommcdo/vim-exchange.git
+[submodule "dotfiles/vim/bundle/ferret"]
+	path = dotfiles/vim/bundle/ferret
+	url = https://github.com/wincent/ferret.git
+[submodule "dotfiles/vim/bundle/tagbar"]
+	path = dotfiles/vim/bundle/tagbar
+	url = https://github.com/majutsushi/tagbar.git
+[submodule "dotfiles/vim/bundle/vim-easymotion"]
+	path = dotfiles/vim/bundle/vim-easymotion
+	url = https://github.com/Lokaltog/vim-easymotion.git
+[submodule "dotfiles/vim/bundle/vim-markdown"]
+	path = dotfiles/vim/bundle/vim-markdown
+	url = https://github.com/codybuell/vim-markdown.git
+[submodule "dotfiles/vim/bundle/vim-arduino-ino"]
+	path = dotfiles/vim/bundle/vim-arduino-ino
+	url = https://github.com/jplaut/vim-arduino-ino.git
+[submodule "dotfiles/vim/bundle/salt-vim"]
+	path = dotfiles/vim/bundle/salt-vim
+	url = https://github.com/saltstack/salt-vim.git
+[submodule "dotfiles/vim/bundle/vim-arduino-syntax"]
+	path = dotfiles/vim/bundle/vim-arduino-syntax
+	url = https://github.com/sudar/vim-arduino-syntax.git
+[submodule "dotfiles/vim/bundle/vim-blade"]
+	path = dotfiles/vim/bundle/vim-blade
+	url = git://github.com/jwalton512/vim-blade.git
