--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "dotfiles/vim/bundle/vim-blade"]
 	path = dotfiles/vim/bundle/vim-blade
 	url = git://github.com/jwalton512/vim-blade.git
+[submodule "dotfiles/shell/base16-shell"]
+	path = dotfiles/shell/base16-shell
+	url = https://github.com/chriskempson/base16-shell.git
