Move config file, fix diff and templating finds

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ Thumbs.db
 # Repository Specific #
 #######################
 
-config
+.config
 dotfiles/homestead/.vagrant
 dotfiles/vim/.netrwhist
 dotfiles/vim/tmp
