Set custom terminfo for tmux to enable italics

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -7,8 +7,9 @@
 #                                                                              #
 ################################################################################
 
-# set 256 color terminal
-set -g default-terminal "screen-256color"
+# set custom 256 color terminal with italics
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ',xterm-256color:Tc'
 
 # theming
 set -w -g window-status-current-fg '#cd5c5c'
