Introduce chaos, change mappings to spacebar

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,5 +1,35 @@
 ################################################################################
 #                                                                              #
+# BINDINGS                                                                     #
+#                                                                              #
+################################################################################
+
+# remap prefix
+unbind-key C-b
+set -g prefix C-Space
+bind Space send-prefix
+
+# use shift-arrow keys (left and right) to rotate panes
+bind -n S-Right select-pane -t :.+
+bind -n S-Left select-pane -t :.-
+
+# use shift-arrow keys (up and down) to rotate windows
+bind -n S-Up next-window
+bind -n S-Down previous-window
+
+# use vi navigation and search in scroll mode ctrl-b [
+setw -g mode-keys vi
+set -g status-keys vi
+bind-key -t vi-edit Up   history-up
+bind-key -t vi-edit Down history-down
+
+# pre-defined sessions ctrl-b [N]
+bind A source-file ~/.tmux/administration
+bind D source-file ~/.tmux/development
+bind L source-file ~/.tmux/logs
+
+################################################################################
+#                                                                              #
 #  COLORS                                                                      #
 #                                                                              #
 #  Use hex values in quotes or colourNNN, for values run the command:          #
@@ -77,31 +107,6 @@ bind-key -t vi-copy MouseUp1Pane cancel
 
 # mouse copy to system clipboard (linux only)
 # bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -in -selection clipboard"
-
-################################################################################
-#                                                                              #
-# BINDINGS                                                                     #
-#                                                                              #
-################################################################################
-
-# use shift-arrow keys (left and right) to rotate panes
-bind -n S-Right select-pane -t :.+
-bind -n S-Left select-pane -t :.-
-
-# use shift-arrow keys (up and down) to rotate windows
-bind -n S-Up next-window
-bind -n S-Down previous-window
-
-# use vi navigation and search in scroll mode ctrl-b [
-setw -g mode-keys vi
-set -g status-keys vi
-bind-key -t vi-edit Up   history-up
-bind-key -t vi-edit Down history-down
-
-# pre-defined sessions ctrl-b [N]
-bind A source-file ~/.tmux/administration
-bind D source-file ~/.tmux/development
-bind L source-file ~/.tmux/logs
 
 ################################################################################
 #                                                                              #
