Rework copy mode mouse config

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -97,10 +97,12 @@ bind-key -T root WheelDownPane \
 # unbind-key -t vi-copy MouseDragEnd1Pane
 
 # stay in copy mode on drag end, but otherwise exit for mouse up
-unbind-key -t vi-copy MouseDragEnd1Pane
-# bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+# unbind-key -t vi-copy MouseDragEnd1Pane
+# bind-key -t vi-copy MouseUp1Pane cancel
+
+# copy selected content to system clipboard
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
 # bind-key -t vi-copy MouseDragEnd1Pane run -b "tmux 'copy-selection -x'"
-bind-key -t vi-copy MouseUp1Pane cancel
 
 # mouse copy to system clipboard (osx only)
 # bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
