--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -99,6 +99,7 @@ bind-key -T root WheelDownPane \
 # stay in copy mode on drag end, but otherwise exit for mouse up
 # unbind-key -t vi-copy MouseDragEnd1Pane
 # bind-key -t vi-copy MouseUp1Pane cancel
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # copy selected content to system clipboard
 bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
