Remove hostname from statusline

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -168,4 +168,4 @@ set-option -g status-left ' #S   ⧉ #I/#{session_windows} ⊞ #P/#{window_panes
 
 # status bar right side
 set-option -g status-right-length 100
-set-option -g status-right "'#H'#([ `pmset -g batt | grep -c 'InternalBattery'` -gt 0 ] && pmset -g batt | awk 'NR==2 {gsub(/;/,\"\");print \"   \"$2}')   %H:%M #(date -u '+%%H:%%M %%d-%%b-%%y') "
+set-option -g status-right "#([ `pmset -g batt | grep -c 'InternalBattery'` -gt 0 ] && pmset -g batt | awk 'NR==2 {gsub(/;/,\"\");print \"   \"$2}')   %H:%M #(date -u '+%%H:%%M %%d-%%b-%%y') "
