--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -27,6 +27,7 @@ bind-key -t vi-edit Down history-down
 bind A source-file ~/.tmux/administration
 bind D source-file ~/.tmux/development
 bind L source-file ~/.tmux/logs
+bind G source-file ~/.tmux/gifcast
 
 ################################################################################
 #                                                                              #
